--- a/driver.htm
+++ b/driver.htm
@@ -55,12 +55,16 @@ Windows Driver Model (WDM)</h3>
     4. User Application透過File跟驅動程式溝通</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="driver/wdm_buffer.htm">
-    5. I/O Manager的File Buffer使用策略</a><br>
+    <a href="driver/wdm_file_buffer.htm">
+    5. File Buffer的使用策略</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_ioctl.htm">
     6. User Application透過IOCTL跟驅動程式溝通</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_ioctl_buffer.htm">
+    7. IOCTL Buffer的使用策略</a><br>
 
 &oplus;
 <b>範例解說 - Assembly (ObjAsm)</b><br>
