--- a/driver.htm
+++ b/driver.htm
@@ -108,12 +108,9 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_file_neither.htm">
     Choose DO_NEITHER_IO for File IRP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    IOCTL<br>
-            
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_ioctl.htm">
-        IRP</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_ioctl.htm">
+    Handle IOCTL IRP</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="driver/wdm/asm_ioctl-buffer.htm">
