--- a/driver.htm
+++ b/driver.htm
@@ -112,9 +112,9 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_ioctl.htm">
     Handle IOCTL IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_ioctl-buffer.htm">
-        METHOD_BUFFERED</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_ioctl_buffer.htm">
+    Choose METHOD_BUFFERED for IOCTL IRP</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="driver/wdm/asm_ioctl-direct-inout.htm">
