--- a/driver.htm
+++ b/driver.htm
@@ -116,13 +116,13 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_ioctl_buffer.htm">
     Choose METHOD_BUFFERED for IOCTL IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_ioctl-direct-inout.htm">
-        METHOD_IN_DIRECT、METHOD_OUT_DIRECT</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_ioctl_direct.htm">
+    Choose METHOD_IN_DIRECT、METHOD_OUT_DIRECT for IOCTL IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_ioctl-neither.htm">
-        METHOD_NEITHER</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_ioctl_neither.htm">
+    Choose METHOD_NEITHER for IOCTL IRP</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/asm_thread.htm">
