--- a/driver.htm
+++ b/driver.htm
@@ -124,9 +124,9 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_ioctl_neither.htm">
     Choose METHOD_NEITHER for IOCTL IRP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/asm_thread.htm">
-    Thread</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_thread.htm">
+    Use Thread</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
     Timer<br>
