--- a/driver.htm
+++ b/driver.htm
@@ -128,16 +128,13 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_thread.htm">
     Use Thread</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Timer<br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_timer_io.htm">
+    Use I/O Timer</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_timer-io.htm">
-        I/O</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_timer-dpc.htm">
-        DPC</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_timer_dpc.htm">
+    Use DPC Timer</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/asm_startio.htm">
