--- a/driver.htm
+++ b/driver.htm
@@ -67,14 +67,14 @@ Windows Driver Model (WDM)</h3>
     7. IOCTL Buffer的使用策略</a><br>
 
 &oplus;
-<b>範例解說 - Assembly (ObjAsm)</b><br>
+<b>使用範例 - Assembly (ObjAsm)</b><br>
 
    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_objasm_setup.htm">
     開發環境</a><br>
 
 &oplus;
-<b>範例解說 - Assembly (MASM32)</b><br>
+<b>使用範例 - Assembly (MASM32)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_asm_setup.htm">
@@ -136,9 +136,9 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_timer_dpc.htm">
     Use DPC Timer</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/asm_startio.htm">
-    StartIO</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_startio.htm">
+    Handle StartIo IRP</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/asm_queue_irp.htm">
@@ -172,7 +172,7 @@ Windows Driver Model (WDM)</h3>
         Semaphore</a><br>
 
 &oplus;
-<b>範例解說 - BASIC (FreeBASIC)</b><br>
+<b>使用範例 - BASIC (FreeBASIC)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_basic_setup.htm">
@@ -183,7 +183,7 @@ Windows Driver Model (WDM)</h3>
     Hello, world!</a><br>
 
 &oplus;
-<b>範例解說 - C/C++ (DDK)</b><br>
+<b>使用範例 - C/C++ (DDK)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_cpp_setup.htm">
@@ -314,7 +314,7 @@ Windows Driver Model (WDM)</h3>
     PsSetCreateProcessNotifyRoutine()</a><br>
 
 &oplus;
-<b>範例解說 - C/C++ (DriverWorks)</b><br>
+<b>使用範例 - C/C++ (DriverWorks)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_ds_setup.htm">
@@ -337,7 +337,7 @@ Windows Driver Model (WDM)</h3>
     Hello, world!</a><br>
 
 &oplus;
-<b>範例解說 - Pascal (DDDK)</b><br>
+<b>使用範例 - Pascal (DDDK)</b><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_pascal_setup.htm">
