--- a/driver/wdm_asm_thread.htm
+++ b/driver/wdm_asm_thread.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../driver.htm">驅動程式</a> - Windows Driver Model (WDM) - 範例解說 - Assembly (MASM32) - <b>Use Thread</b></h3>
+<h3><a href="../driver.htm">驅動程式</a> - Windows Driver Model (WDM) - 使用範例 - Assembly (MASM32) - <b>Use Thread</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
