--- a/driver.htm
+++ b/driver.htm
@@ -66,6 +66,10 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_ioctl_buffer.htm">
     7. IOCTL Buffer的使用策略</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_queue_irp.htm">
+    8. Queue Irp的操作步驟</a><br>
+
 &oplus;
 <b>使用範例 - Assembly (ObjAsm)</b><br>
 
@@ -140,8 +144,8 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_startio.htm">
     Handle StartIo IRP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/asm_queue_irp.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_queue_irp.htm">
     Queue IRP</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
