--- a/driver.htm
+++ b/driver.htm
@@ -70,6 +70,10 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_queue_irp.htm">
     8. Queue Irp的操作步驟</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cancel_irp.htm">
+    9. Cancel Irp的操作步驟</a><br>
+
 &oplus;
 <b>使用範例 - Assembly (ObjAsm)</b><br>
 
@@ -148,8 +152,8 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_queue_irp.htm">
     Queue IRP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/asm_cancel_irp.htm">
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_cancel_irp.htm">
     Cancel IRP</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
