--- a/driver.htm
+++ b/driver.htm
@@ -156,9 +156,9 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_cancel_irp.htm">
     Cancel IRP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/asm_csq.htm">
-    Cancel-Safe IRP Queue(CSQ)</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_csq.htm">
+    Use Cancel-Safe IRP Queue(CSQ)</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&oplus;
     Synchronization<br>
