--- a/driver.htm
+++ b/driver.htm
@@ -74,6 +74,10 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_cancel_irp.htm">
     9. Cancel Irp的操作步驟</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_sync.htm">
+    10. 同步化物件的使用說明</a><br>
+
 &oplus;
 <b>使用範例 - Assembly (ObjAsm)</b><br>
 
@@ -160,24 +164,21 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_asm_csq.htm">
     Use Cancel-Safe IRP Queue(CSQ)</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Synchronization<br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_spinlock.htm">
+    Use Spin Lock</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_spinlock.htm">
-        Spin Lock</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_event.htm">
+    Use Event</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_event.htm">
-        Event</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_mutex.htm">
+    Use Mutex</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_mutex.htm">
-        Mutex</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/asm_semaphore.htm">
-        Semaphore</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_semaphore.htm">
+    Use Semaphore</a><br>
 
 &oplus;
 <b>使用範例 - BASIC (FreeBASIC)</b><br>
