--- a/driver/wdm_asm_file.htm
+++ b/driver/wdm_asm_file.htm
@@ -84,8 +84,8 @@ Unload proc pMyDriver : PDRIVER_OBJECT
 Unload endp
   
 IrpPnp proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
+    local pDevExt : ptr
     local szSymName : UNICODE_STRING
-    local pDevExt : ptr MyDeviceExtension
       
     mov eax, pMyDevice
     push (DEVICE_OBJECT ptr [eax]).DeviceExtension
