--- a/driver/wdm_asm_file_buffer.htm
+++ b/driver/wdm_asm_file_buffer.htm
@@ -54,7 +54,7 @@ IrpOpenClose endp
 IrpReadWrite proc uses ebx pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
     local pBuf : dword
     local dwLen : dword
-    local pDevExt : ptr MyDeviceExtension
+    local pDevExt : ptr
  
     and dwLen, 0
     mov eax, pMyDevice
@@ -137,7 +137,7 @@ Unload proc pMyDriver : PDRIVER_OBJECT
 Unload endp
      
 IrpPnp proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
-    local pDevExt : ptr MyDeviceExtension
+    local pDevExt : ptr
     local szSymName : UNICODE_STRING
      
     mov eax, pMyDevice
