--- a/driver/wdm_asm_file_neither.htm
+++ b/driver/wdm_asm_file_neither.htm
@@ -56,9 +56,9 @@ IrpOpenClose endp
 IrpReadWrite proc uses ebx pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
     local dwLen : dword
     local pBuf : dword
+    local pDevExt : ptr
     local bReadable : dword
     local bWritable : dword
-    local pDevExt : ptr MyDeviceExtension
      
     and dwLen, 0
     mov eax, pMyDevice
@@ -157,8 +157,8 @@ Unload proc pMyDriver : PDRIVER_OBJECT
 Unload endp
  
 IrpPnp proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
+    local pDevExt : ptr
     local szSymName : UNICODE_STRING
-    local pDevExt : ptr MyDeviceExtension
      
     mov eax, pMyDevice
     push (DEVICE_OBJECT ptr [eax]).DeviceExtension
