--- a/driver/wdm_asm_ioctl_direct.htm
+++ b/driver/wdm_asm_ioctl_direct.htm
@@ -62,7 +62,7 @@ IrpOpenClose endp
 IrpIOCTL proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
     local pBuf : DWORD
     local dwLen : DWORD
-    local pDevExt : ptr MyDeviceExtension
+    local pDevExt : ptr
  
     and dwLen, 0
     mov eax, pMyDevice
@@ -110,7 +110,7 @@ IrpIOCTL proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
 IrpIOCTL endp
  
 IrpPnp proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
-    local pDevExt : ptr MyDeviceExtension
+    local pDevExt : ptr
     local szSymName : UNICODE_STRING
  
     mov eax, pMyDevice
