--- a/driver/wdm_asm_queue_irp.htm
+++ b/driver/wdm_asm_queue_irp.htm
@@ -88,7 +88,7 @@ IrpOpenClose proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
 IrpOpenClose endp
  
 IrpIOCTL proc uses ebx ecx pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
-    local pDevExt : ptr Dev_Ext
+    local pDevExt : ptr
     local stTimePeriod : LARGE_INTEGER
  
     mov eax, pMyDevice
@@ -126,8 +126,8 @@ IrpIOCTL proc uses ebx ecx pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
 IrpIOCTL endp
  
 IrpPnp proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
+    local pDevExt : ptr
     local szSymName : UNICODE_STRING
-    local pDevExt : ptr MyDeviceExtension
  
     mov eax, pMyDevice
     push (DEVICE_OBJECT ptr [eax]).DeviceExtension
