--- a/driver/wdm_asm_startio.htm
+++ b/driver/wdm_asm_startio.htm
@@ -40,7 +40,7 @@ MyDeviceExtension ends
 StartIo proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
     local pBuf : DWORD
     local dwLen : DWORD
-    local pDevExt : ptr MyDeviceExtension
+    local pDevExt : ptr
 
     mov eax, pMyDevice
     push (DEVICE_OBJECT ptr [eax]).DeviceExtension
@@ -111,8 +111,8 @@ IrpFile proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
 IrpFile endp
  
 IrpPnp proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
+    local pDevExt : ptr
     local szSymName : UNICODE_STRING
-    local pDevExt : ptr MyDeviceExtension
  
     mov eax, pMyDevice
     push (DEVICE_OBJECT ptr [eax]).DeviceExtension
