--- a/driver/wdm_asm_thread.htm
+++ b/driver/wdm_asm_thread.htm
@@ -93,9 +93,9 @@ IrpOpenClose endp
 IrpIOCTL proc uses ebx pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
     local pBuf : DWORD
     local dwLen : DWORD
+    local pDevExt : ptr
     local hThread : DWORD
     local pThread : PVOID
-    local pDevExt : ptr MyDeviceExtension
  
     and dwLen, 0
     mov eax, pMyDevice
@@ -145,8 +145,8 @@ IrpIOCTL proc uses ebx pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
 IrpIOCTL endp
  
 IrpPnp proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
+    local pDevExt : ptr
     local szSymName : UNICODE_STRING
-    local pDevExt : ptr MyDeviceExtension
  
     mov eax, pMyDevice
     push (DEVICE_OBJECT ptr [eax]).DeviceExtension
