--- a/driver/wdm_asm_cancel_irp.htm
+++ b/driver/wdm_asm_cancel_irp.htm
@@ -100,7 +100,7 @@ IrpOpenClose endp
  
 IrpIOCTL proc uses ebx ecx pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
     local dwLen : DWORD
-    local pDevExt : ptr Dev_Ext
+    local pDevExt : ptr
     local stTimePeriod : LARGE_INTEGER
  
     and dwLen, 0
@@ -139,8 +139,8 @@ IrpIOCTL proc uses ebx ecx pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
 IrpIOCTL endp
  
 IrpPnp proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
+    local pDevExt : ptr
     local szSymName : UNICODE_STRING
-    local pDevExt : ptr MyDeviceExtension
  
     mov eax, pMyDevice
     push (DEVICE_OBJECT ptr [eax]).DeviceExtension
