--- a/driver/wdm_asm_file_direct.htm
+++ b/driver/wdm_asm_file_direct.htm
@@ -55,7 +55,7 @@ IrpOpenClose endp
 IrpReadWrite proc uses ebx pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
     local pBuf : dword
     local dwLen : dword
-    local pDevExt : ptr MyDeviceExtension
+    local pDevExt : ptr
      
     and dwLen, 0
     mov eax, pMyDevice
@@ -142,8 +142,8 @@ Unload proc pMyDriver : PDRIVER_OBJECT
 Unload endp
  
 IrpPnp proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
+    local pDevExt : ptr
     local szSymName : UNICODE_STRING
-    local pDevExt : ptr MyDeviceExtension
      
     mov eax, pMyDevice
     push (DEVICE_OBJECT ptr [eax]).DeviceExtension
