--- a/driver/wdm_asm_ioctl.htm
+++ b/driver/wdm_asm_ioctl.htm
@@ -58,7 +58,7 @@ IrpOpenClose endp
  
 IrpIOCTL proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
     local dwLen : DWORD
-    local pDevExt : ptr MyDeviceExtension
+    local pDevExt : ptr
  
     and dwLen, 0
     mov eax, pMyDevice
@@ -81,8 +81,8 @@ IrpIOCTL proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
 IrpIOCTL endp
  
 IrpPnP proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
+    local pDevExt : ptr
     local szSymName : UNICODE_STRING
-    local pDevExt : ptr MyDeviceExtension
  
     mov eax, pMyDevice
     push (DEVICE_OBJECT ptr [eax]).DeviceExtension
