--- a/driver/wdm_asm_ioctl_buffer.htm
+++ b/driver/wdm_asm_ioctl_buffer.htm
@@ -61,7 +61,7 @@ IrpOpenClose endp
 IrpIOCTL proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
     local pBuf : DWORD
     local dwLen : DWORD
-    local pDevExt : ptr MyDeviceExtension
+    local pDevExt : ptr
  
     and dwLen, 0
     mov eax, pMyDevice
@@ -108,8 +108,8 @@ IrpIOCTL proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
 IrpIOCTL endp
  
 IrpPnp proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
+    local pDevExt : ptr
     local szSymName : UNICODE_STRING
-    local pDevExt : ptr MyDeviceExtension
  
     mov eax, pMyDevice
     push (DEVICE_OBJECT ptr [eax]).DeviceExtension
