--- a/driver/wdm_asm_timer_io.htm
+++ b/driver/wdm_asm_timer_io.htm
@@ -73,9 +73,9 @@ IrpOpenClose endp
  
 IrpIOCTL proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
     local pBuf : DWORD
+    local pDevExt : ptr
     local hThread : DWORD
     local pThread : PVOID
-    local pDevExt : ptr MyDeviceExtension
  
     mov eax, pMyDevice
     push (DEVICE_OBJECT ptr [eax]).DeviceExtension
@@ -102,8 +102,8 @@ IrpIOCTL proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
 IrpIOCTL endp
  
 IrpPnp proc pMyDevice : PDEVICE_OBJECT, pIrp : PIRP
+    local pDevExt : ptr
     local szSymName : UNICODE_STRING
-    local pDevExt : ptr MyDeviceExtension
  
     mov eax, pMyDevice
     push (DEVICE_OBJECT ptr [eax]).DeviceExtension
