--- a/driver.htm
+++ b/driver.htm
@@ -188,6 +188,14 @@ Windows Driver Model (WDM)</h3>
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_basic_makefile.htm">
+    make.bat</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_asm_inf.htm">
+    main.inf</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_basic_hello.htm">
     Hello, world!</a><br>
 
@@ -199,16 +207,12 @@ Windows Driver Model (WDM)</h3>
     開發環境</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_makefile.htm">
+    make.bat</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_asm_inf.htm">
     main.inf</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="driver/wdm_cpp_sources.htm">
-    sources</a><br>
-
-    &emsp;&emsp;&emsp;&emsp;&dash;
-    <a href="driver/wdm_cpp_makefile.htm">
-    makefile</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="driver/wdm_cpp_hello.htm">
