--- a/driver/wdm_basic_hello.htm
+++ b/driver/wdm_basic_hello.htm
@@ -130,8 +130,8 @@ DESCRIPTION="MyDriver"
 編譯
 </p>
 <pre>
-c:\freebasic\fbc32.exe -c main.bas
-c:\masm32\bin\link.exe main.o /driver /base:0x10000 /subsystem:native /entry:DriverEntry "c:\masm32\lib\wxp\i386\ntoskrnl.lib" "c:\masm32\lib\wxp\i386\csq.lib" /OUT:main.sys
+"c:\freebasic\fbc32.exe" -c main.bas
+"c:\masm32\bin\link.exe" main.o /driver /base:0x10000 /subsystem:native /entry:DriverEntry "c:\masm32\lib\wxp\i386\ntoskrnl.lib" "c:\masm32\lib\wxp\i386\csq.lib" /OUT:main.sys
 </pre><br>
 
 <p>
