--- a/driver.htm
+++ b/driver.htm
@@ -218,8 +218,9 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_cpp_hello.htm">
     Hello, world!</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    File<br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_file.htm">
+    Handle File IRP</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="driver/wdm/cpp_file.htm">
