--- a/driver.htm
+++ b/driver.htm
@@ -222,13 +222,9 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_cpp_file.htm">
     Handle File IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/cpp_file.htm">
-        IRP</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/cpp_file-buffer.htm">
-        DO_BUFFERED_IO</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_file_buffer.htm">
+    Choose DO_BUFFERED_IO for File IRP</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="driver/wdm/cpp_file-direct-pio.htm">
