--- a/driver.htm
+++ b/driver.htm
@@ -234,24 +234,21 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_cpp_file_neither.htm">
     Choose DO_NEITHER_IO for File IRP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    IOCTL<br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_ioctl.htm">
+    Handle IOCTL IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/cpp_ioctl.htm">
-        IRP</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_ioctl_buffer.htm">
+    Choose METHOD_BUFFERED for IOCTL IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/cpp_ioctl-buffer.htm">
-        METHOD_BUFFERED</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_ioctl_direct.htm">
+    Choose METHOD_IN_DIRECT、METHOD_OUT_DIRECT for IOCTL IRP</a><br>
 
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/cpp_ioctl-direct-inout.htm">
-        METHOD_IN_DIRECT、METHOD_OUT_DIRECT</a><br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/cpp_ioctl-neither.htm">
-        METHOD_NEITHER</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_ioctl_neither.htm">
+    Choose METHOD_NEITHER for IOCTL IRP</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&lowast;
     <a href="driver/wdm/cpp_thread.htm">
