--- a/driver/wdm_cpp_file_neither.htm
+++ b/driver/wdm_cpp_file_neither.htm
@@ -92,7 +92,7 @@ NTSTATUS IrpFile(PDEVICE_OBJECT pMyDevice, PIRP pIrp)
     return STATUS_SUCCESS;
 }
     
-NTSTATUS DriverEntry(PDRIVER_OBJECT pMyDriver, PUNICODE_STRING pOurRegistry)
+NTSTATUS DriverEntry(PDRIVER_OBJECT pMyDriver, PUNICODE_STRING pMyRegistry)
 {
     pMyDriver-&gt;MajorFunction[IRP_MJ_PNP]    = IrpPnp;
     pMyDriver-&gt;MajorFunction[IRP_MJ_CREATE] = IrpFile;
