--- a/driver/wdm_adddevice.htm
+++ b/driver/wdm_adddevice.htm
@@ -29,14 +29,14 @@ PDEVICE_OBJECT gNextDevice = NULL;
 NTSTATUS AddDevice(PDRIVER_OBJECT pMyDriver, PDEVICE_OBJECT pPhyDevice)
 {
     PDEVICE_OBJECT pMyDevice;
-    UNICODE_STRING usSymboName;
+    UNICODE_STRING usSymbolName;
     UNICODE_STRING usDeviceName;
 
     // Step 1
     RtlInitUnicodeString(&amp;usDeviceName, L"\\Device\\MyDriver");
-    RtlInitUnicodeString(&amp;usSymboName, L"\\DosDevices\\MyDriver");
+    RtlInitUnicodeString(&amp;usSymbolName, L"\\DosDevices\\MyDriver");
     IoCreateDevice(pMyDriver, 0, &amp;usDeviceName, FILE_DEVICE_UNKNOWN, 0, FALSE, &amp;pMyDevice);
-    IoCreateSymbolicLink(&amp;usSymboName, &amp;usDeviceName);
+    IoCreateSymbolicLink(&amp;usSymbolName, &amp;usDeviceName);
 
     // Step 2
     gNextDevice = IoAttachDeviceToDeviceStack(pMyDevice, pPhyDevice);
