--- a/driver/wdm_cpp_file.htm
+++ b/driver/wdm_cpp_file.htm
@@ -21,12 +21,12 @@ NTSTATUS AddDevice(PDRIVER_OBJECT pMyDriver, PDEVICE_OBJECT pPhyDevice)
 {
     PDEVICE_OBJECT pMyDevice = NULL;
     UNICODE_STRING usDeviceName = { 0 };
-    UNICODE_STRING usSymboName = { 0 };
+    UNICODE_STRING usSymbolName = { 0 };
  
     RtlInitUnicodeString(&amp;usDeviceName, L"\\Device\\MyDriver");
     IoCreateDevice(pMyDriver, 0, &amp;usDeviceName, FILE_DEVICE_UNKNOWN, 0, FALSE, &amp;pMyDevice);
-    RtlInitUnicodeString(&amp;usSymboName, L"\\DosDevices\\MyDriver");
-    IoCreateSymbolicLink(&amp;usSymboName, &amp;usDeviceName);
+    RtlInitUnicodeString(&amp;usSymbolName, L"\\DosDevices\\MyDriver");
+    IoCreateSymbolicLink(&amp;usSymbolName, &amp;usDeviceName);
     pNextDevice = IoAttachDeviceToDeviceStack(pMyDevice, pPhyDevice);
     pMyDevice-&gt;Flags &amp;= ~DO_DEVICE_INITIALIZING;
     pMyDevice-&gt;Flags |= DO_BUFFERED_IO;
@@ -39,12 +39,12 @@ void Unload(PDRIVER_OBJECT pMyDriver)
  
 NTSTATUS IrpPnp(PDEVICE_OBJECT pMyDevice, PIRP pIrp)
 {
-    UNICODE_STRING usSymboName = { 0 };
+    UNICODE_STRING usSymbolName = { 0 };
     PIO_STACK_LOCATION pStack = IoGetCurrentIrpStackLocation(pIrp);
  
     if (pStack-&gt;MinorFunction == IRP_MN_REMOVE_DEVICE) {
-        RtlInitUnicodeString(&amp;usSymboName, L"\\DosDevices\\MyDriver");
-        IoDeleteSymbolicLink(&amp;usSymboName);
+        RtlInitUnicodeString(&amp;usSymbolName, L"\\DosDevices\\MyDriver");
+        IoDeleteSymbolicLink(&amp;usSymbolName);
         IoDetachDevice(pNextDevice);
         IoDeleteDevice(pMyDevice);
         IoCompleteRequest(pIrp, IO_NO_INCREMENT);
