--- a/driver.htm
+++ b/driver.htm
@@ -250,16 +250,13 @@ Windows Driver Model (WDM)</h3>
     <a href="driver/wdm_cpp_ioctl_neither.htm">
     Choose METHOD_NEITHER for IOCTL IRP</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&lowast;
-    <a href="driver/wdm/cpp_thread.htm">
-    Thread</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_thread.htm">
+    Use Thread</a><br>
 
-    &emsp;&emsp;&emsp;&emsp;&oplus;
-    Timer<br>
-
-        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
-        <a href="driver/wdm/cpp_timer-io.htm">
-        I/O</a><br>
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="driver/wdm_cpp_timer_io.htm">
+    Use I/O Timer</a><br>
 
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="driver/wdm/cpp_timer-dpc.htm">
